<resources>
    <string name="app_name">My Stuff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="favorite">Favorite</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="register_success">Register Success</string>
    <string name="register_is_successfully">Register is successfully</string>
    <string name="ok">Ok</string>
    <string name="logout">logout</string>
    <string name="waiting">Waiting...</string>
    <string name="username">username</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_harus_sama">Password must be same</string>
    <string name="cancel">Cancel</string>
    <string name="search">search</string>
    <string name="sort_by">Sort By</string>
    <string name="empty_data">Empty Data</string>
    <string name="from_a_to_z">From A to Z</string>
    <string name="from_z_to_a">From Z to A</string>
    <string name="front">front</string>
    <string name="detail_product">Detail Product</string>
    <string name="stock">Stock</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="type">Type</string>
    <string name="helpers">:</string>
    <string name="description">Description</string>
    <string name="buy">Buy</string>
    <string name="cart">+Trolley</string>
    <string name="buy_now">Buy Now -</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="pesanan_anda_berhasil">Your Order Success</string>
    <string name="berikan_penilaian_anda">Gift Your Rating</string>
    <string name="submit">Submit</string>
    <string name="total_price">Total Price</string>
    <string name="check_all">Check All</string>
    <string name="trolley">Trolley</string>
    <string name="succes_trolley">Success Adding to Trolley</string>
    <string name="delete_trolley">Success Delete Item in Trolley</string>
    <string name="succes_rating">Success Adding Rating</string>
    <string name="succes_favorite">Success Adding to Favorite</string>
    <string name="delete_favorite">Success Un Favorite Item</string>
    <string name="out_stock">Out Of Stock</string>
    <string name="failed_trolley">Sorry Your item Out of Stock</string>
    <string name="url">Url</string>
    <string name="try_again">Try Again</string>
    <string name="other_product">Other Product</string>
    <string name="history_product">History</string>
    <string name="tittle">Tittle</string>
    <string name="notification">Notification</string>
    <string name="multiple_select">Multiple Select</string>
    <string name="payment_methode">Payment Methode</string>
    <string name="bca_virtual_account">BCA Virtual Account</string>
    <string name="choose_payment_methode">Choose Payment Methode</string>

    <!--    Firebase gms-->
    <string name="default_web_client_id" translatable="false">1037486014292-ugjuav872pt9tp2a70nl0k0bjce3pio9.apps.googleusercontent.com</string>
    <string name="gcm_defaultSenderId" translatable="false">1037486014292</string>
    <string name="google_api_key" translatable="false">AIzaSyD5F91jl0oBRMHAVUeCoPwXlleCsgv-rAg</string>
    <string name="google_app_id" translatable="false">1:1037486014292:android:a77a62f3b5d5b3683dd2c1</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyD5F91jl0oBRMHAVUeCoPwXlleCsgv-rAg</string>
    <string name="google_storage_bucket" translatable="false">trainingphincon.appspot.com</string>
    <string name="project_id" translatable="false">trainingphincon</string>
</resources>