<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink"
    tools:context=".ui.auth.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="257dp"
        android:layout_height="256dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/artboard1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:layout_marginTop="21dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="38dp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:fontFamily="@font/poppinsbold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_checking_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_email_format"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="10sp"
                android:fontFamily="@font/poppinsbold"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
                tools:ignore="SmallSp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="38dp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_checking_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:fontFamily="@font/poppinsbold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="279dp"
                android:layout_height="52dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progress="200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/sign_up"
        android:background="@drawable/btn_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>