<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/card_custom"
    tools:context=".ui.detail.BuyDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_image_fragment_dialog"
        android:layout_width="127dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/shimmer_a"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_stock_helpers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/stock"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/card_image_fragment_dialog"
        app:layout_constraintStart_toEndOf="@+id/card_image_fragment_dialog" />

    <TextView
        android:id="@+id/tv_price_fragment_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_stock_helpers"
        app:layout_constraintStart_toStartOf="@+id/tv_stock_helpers"
        tools:text="Rp. 10.000" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/helpers"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_helpers"
        app:layout_constraintStart_toEndOf="@+id/tv_stock_helpers"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_helpers" />

    <TextView
        android:id="@+id/tv_stock_fragment_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppinsbold"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_helpers"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_helpers"
        tools:text="26" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="@color/shimmer_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_image_fragment_dialog" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/total"
        android:fontFamily="@font/poppinsbold"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/add_fragment_dialog"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_add_circle"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


    <TextView
        android:id="@+id/tv_total_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_fragment_dialog"
        app:layout_constraintEnd_toStartOf="@+id/add_fragment_dialog"
        app:layout_constraintTop_toTopOf="@+id/add_fragment_dialog" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/min_fragment_dialog"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_min_circle"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintEnd_toStartOf="@+id/tv_total_number"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/shimmer_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/pinkz"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_helpers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/buy_now"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppinsbold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_helpers"
                app:layout_constraintStart_toEndOf="@+id/tv_helpers"
                app:layout_constraintTop_toTopOf="@+id/tv_helpers"
                tools:text="Rp. 10.000" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>